--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
