--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@reduxjs/toolkit": "^1.8.1",
+    "@stripe/react-stripe-js": "^1.16.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo3-cache-persist": "^0.15.0",
     "axios": "^1.3.4",
     "firebase": "^9.6.1",
     "firebase-admin": "^11.5.0",
@@ -16,7 +19,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -41,13 +44,9 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -62,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.45.0"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "sass": "^1.81.0"
   }
 }
