--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.48.0",
+    "algoliasearch": "^4.24.0",
     "body-parser": "^1.18.3",
     "compression": "1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
-    "heroku": "^7.69.0",
-    "stripe": "^11.13.0"
+    "graphql": "^16.9.0",
+    "heroku": "^9.5.0",
+    "stripe": "^11.13.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.19.1"
+    "concurrently": "^9.1.0",
+    "globals": "^15.12.0",
+    "nodemon": "^3.1.7"
   }
 }
